--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
